@@ -1,6 +1,7 @@
 0.0.4   2014-02-02
     - Minimal version of perl in Build.PL and META.yml (CPANTS).
         - Was 0 previously.
+    - Change "use base" to "use parent".
 
 0.0.3   2014-01-30
     - Minimal version of perl.
